--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -127,7 +127,7 @@
                                                     'has-error': clubForm.clubName.$invalid && vm.submitted }">
                   <label>Nom du club d'investissement</label>
 
-                  <input type="text" name="clubName" class="form-control" ng-model="vm.club.clubName"
+                  <input type="text" name="clubName" class="form-control" ng-model="club.clubName"
                          required />
                   <p class="help-block" ng-show="clubForm.clubName.$error.required && vm.submitted">
                     Le nom du club est requis
@@ -140,7 +140,7 @@
                                                     'has-error': clubForm.creationDate.$invalid && vm.submitted }">
                   <label>Date de création du club</label>
 
-                  <input type="date" name="creationDate" class="form-control" ng-model="vm.club.creationDate"
+                  <input type="date" name="creationDate" class="form-control" ng-model="club.creationDate"
                          required />
                   <p class="help-block" ng-show="clubForm.creationDate.$error.required && vm.submitted">
                     La date de création du club est requise
@@ -159,7 +159,7 @@
                   <label>Montant du versement initial</label>
 
                   <div class="input-group">
-                    <input type="number" name="initialAmount" class="form-control" ng-model="vm.club.initialAmount"
+                    <input type="number" name="initialAmount" class="form-control" ng-model="club.initialAmount"
                            required />
                     <span class="input-group-addon">€</span>
                   </div>
@@ -178,11 +178,11 @@
                   <label>Montant du versement régulier</label>
 
                   <div class="input-group">
-                    <input type="number" name="monthlyAmount" class="form-control" ng-model="vm.club.monthlyAmount"
+                    <input type="number" name="monthlyAmount" class="form-control" ng-model="club.monthlyAmount"
                            required />
                     <span class="input-group-addon">€ / 
-                      <span ng-show="vm.club.periods.weekdayMode && vm.club.periods.weekday.regularity>1">{{vm.club.periods.weekday.regularity}}</span>
-                      <span ng-show="!vm.club.periods.weekdayMode && vm.club.periods.fixed.regularity>1">{{vm.club.periods.fixed.regularity}}</span>
+                      <span ng-show="club.periods.weekdayMode && club.periods.weekday.regularity>1">{{club.periods.weekday.regularity}}</span>
+                      <span ng-show="!club.periods.weekdayMode && club.periods.fixed.regularity>1">{{club.periods.fixed.regularity}}</span>
                        mois</span>
                   </div>
                   <p class="help-block" ng-show="clubForm.monthlyAmount.$error.required && vm.submitted">
@@ -200,7 +200,7 @@
                   <label>Montant de la part</label>
 
                   <div class="input-group">
-                    <input type="number" name="shareAmount" class="form-control" ng-model="vm.club.shareAmount"
+                    <input type="number" name="shareAmount" class="form-control" ng-model="club.shareAmount"
                            required />
                     <span class="input-group-addon">€</span>
                   </div>
@@ -219,7 +219,7 @@
                   <label>Pourcentage de frais de démission</label>
 
                   <div class="input-group">
-                    <input type="number" name="exitPercentage" class="form-control" ng-model="vm.club.exitPercentage"
+                    <input type="number" name="exitPercentage" class="form-control" ng-model="club.exitPercentage"
                          required />
                     <span class="input-group-addon">%</span>
                   </div>
@@ -243,15 +243,15 @@
                     <label>Périodes</label>
                     <i> - Notre conseil : Définissez les périodes au même rythme que les réunions du club.</i><br />
                     <div class="col-sm-offset-1 col-sm-5 text-right">
-                      <input id="periods-weekday" type="checkbox" ng-model="vm.club.periods.weekdayMode" ng-change="changeMode(vm, 'weekday')" />
+                      <input id="periods-weekday" type="checkbox" ng-model="club.periods.weekdayMode" ng-change="changeMode(vm, 'weekday')" />
                       <label for="periods-weekday">
-                        <select class="input-periods" name="periods-weekday-number" ng-model="vm.club.periods.weekday.number" ng-change="changeMode(vm, 'weekday')">
+                        <select class="input-periods" name="periods-weekday-number" ng-model="club.periods.weekday.number" ng-change="changeMode(vm, 'weekday')">
                           <option value="1">le 1er</option>
                           <option value="2">le 2ème</option>
                           <option value="3">le 3ème</option>
                           <option value="4">le 4ème</option>
                         </select>
-                        <select class="input-periods" name="periods-weekday-day" ng-model="vm.club.periods.weekday.day" ng-change="changeMode(vm, 'weekday')">
+                        <select class="input-periods" name="periods-weekday-day" ng-model="club.periods.weekday.day" ng-change="changeMode(vm, 'weekday')">
                           <option value="1">lundi</option>
                           <option value="2">mardi</option>
                           <option value="3">mercredi</option>
@@ -260,7 +260,7 @@
                           <option value="6">samedi</option>
                           <option value="0">dimanche</option>
                         </select>
-                        <select class="input-periods" name="periods-weekday-regularity" ng-model="vm.club.periods.weekday.regularity" ng-change="changeMode(vm, 'weekday')">
+                        <select class="input-periods" name="periods-weekday-regularity" ng-model="club.periods.weekday.regularity" ng-change="changeMode(vm, 'weekday')">
                           <option value="1">de chaque mois</option>
                           <option value="2">tous les 2 mois</option>
                           <option value="3">tous les 3 mois</option>
@@ -274,12 +274,12 @@
                       ou
                     </div>
                     <div class="col-sm-5">
-                      <input id="periods-fixed" type="checkbox" ng-model="vm.club.periods.weekdayMode" ng-true-value="false" ng-false-value="true" ng-change="changeMode(vm, 'fixed')">
+                      <input id="periods-fixed" type="checkbox" ng-model="club.periods.weekdayMode" ng-true-value="false" ng-false-value="true" ng-change="changeMode(vm, 'fixed')">
                       <label for="periods-fixed">
-                        <select class="input-periods" name="periods-fixed-number" ng-model="vm.club.periods.fixed.number" ng-change="changeMode(vm, 'fixed')">
+                        <select class="input-periods" name="periods-fixed-number" ng-model="club.periods.fixed.number" ng-change="changeMode(vm, 'fixed')">
                           <option ng-repeat="i in [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31]" value="{{i}}">le {{ i }}</option>
                         </select>
-                        <select class="input-periods" name="periods-fixed-regularity" ng-model="vm.club.periods.fixed.regularity" ng-change="changeMode(vm, 'fixed')">
+                        <select class="input-periods" name="periods-fixed-regularity" ng-model="club.periods.fixed.regularity" ng-change="changeMode(vm, 'fixed')">
                           <option value="1">de chaque mois</option>
                           <option value="2">tous les 2 mois</option>
                           <option value="3">tous les 3 mois</option>
@@ -294,9 +294,9 @@
               </div>
               <div class="row">
                 <div class="col-sm-11 text-center">
-                  avec la première période du {{vm.club.creationDate | date : "dd/MM/yyyy"}} au&nbsp;
-                  <select class="input-periods" name="periods-fixed-regularity" ng-model="vm.club.endFirstPeriod">
-                    <option ng-repeat="endFP in vm.club.endFirstPeriods track by $index" value="{{$index}}">{{endFP | date : "dd/MM/yyyy"}}</option>
+                  avec la première période du {{club.creationDate | date : "dd/MM/yyyy"}} au&nbsp;
+                  <select class="input-periods" name="periods-fixed-regularity" ng-model="club.endFirstPeriod">
+                    <option ng-repeat="endFP in club.endFirstPeriods track by $index" value="{{$index}}">{{endFP | date : "dd/MM/yyyy"}}</option>
                   </select>
                 </div>
               </div>
@@ -381,7 +381,7 @@
 
             <div class="row">
               <div class="col-sm-12 text-center club-finalize-status">
-                Pour terminer l'inscription du club d'investissement et bénéficier de Curves gratuitement, merci d'envoyer une copie de vos statuts à <a href="mailto:club@curves-app.com?subject=Statuts du club {{vm.club.clubName}}">club@curves-app.com</a>
+                Pour terminer l'inscription du club d'investissement et bénéficier de Curves gratuitement, merci d'envoyer une copie de vos statuts à <a href="mailto:club@curves-app.com?subject=Statuts du club {{club.clubName}}">club@curves-app.com</a>
               </div>
             </div>
 
@@ -405,7 +405,7 @@
       <br />
       Dès que les statuts auront été reçus et traités par notre équipe, chaque membre du club recevra un email pour activer gratuitement son compte personnel.<br />
       <br />
-      (Pour rappel, pour terminer l'inscription du club d'investissement et bénéficier de Curves gratuitement, merci d'envoyer une copie de vos statuts à <a href="mailto:club@curves-app.com?subject=Statuts du club {{vm.club.clubName}}">club@curves-app.com</a>)<br />
+      (Pour rappel, pour terminer l'inscription du club d'investissement et bénéficier de Curves gratuitement, merci d'envoyer une copie de vos statuts à <a href="mailto:club@curves-app.com?subject=Statuts du club {{club.clubName}}">club@curves-app.com</a>)<br />
       <br />
       Merci pour votre confiance !
     </div>
