--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -243,7 +243,7 @@
                     <label>Périodes</label>
                     <i> - Notre conseil : Définissez les périodes au même rythme que les réunions du club.</i><br />
                     <div class="col-sm-offset-1 col-sm-5 text-right">
-                      <input id="periods-weekday" type="checkbox" ng-model="club.periods.weekdayMode" ng-change="changeMode(vm, 'weekday')" />
+                      <input id="periods-weekday" class="signup-checkbox" type="checkbox" ng-model="club.periods.weekdayMode" ng-change="changeMode(vm, 'weekday')" />
                       <label for="periods-weekday">
                         <select class="input-periods" name="periods-weekday-number" ng-model="club.periods.weekday.number" ng-change="changeMode(vm, 'weekday')">
                           <option value="1">le 1er</option>
@@ -274,7 +274,7 @@
                       ou
                     </div>
                     <div class="col-sm-5">
-                      <input id="periods-fixed" type="checkbox" ng-model="club.periods.weekdayMode" ng-true-value="false" ng-false-value="true" ng-change="changeMode(vm, 'fixed')">
+                      <input id="periods-fixed" class="signup-checkbox" type="checkbox" ng-model="club.periods.weekdayMode" ng-true-value="false" ng-false-value="true" ng-change="changeMode(vm, 'fixed')">
                       <label for="periods-fixed">
                         <select class="input-periods" name="periods-fixed-number" ng-model="club.periods.fixed.number" ng-change="changeMode(vm, 'fixed')">
                           <option ng-repeat="i in [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31]" value="{{i}}">le {{ i }}</option>
