--- a/client/app/treasury/treasury.html
+++ b/client/app/treasury/treasury.html
@@ -23,9 +23,9 @@
 	<div class="row" ng-repeat="move in treasury_moves track by $index" ng-show="move.amount != 0">
 		<div class="col-sm-2 text-center">{{move.date | date : 'dd/MM/yyyy'}}</div>
 		<div class="col-sm-4">{{move.wording}}{{ move.periodEnd ? ' - période '+(move.period | date: 'dd/MM')+' - '+(move.periodEnd | date: 'dd/MM/yyyy') : ''}}</div>
-		<div class="col-sm-2 text-center">{{ (move.amount | number:2) < 0 ? (-1*move.amount)+' €' : '' }}</div>
-		<div class="col-sm-2 text-center">{{ (move.amount | number:2) > 0 ? move.amount+' €' : '' }}</div>
-		<div class="col-sm-2 text-center">{{(getSum($index) | number:2)+' €' }}</div>
+		<div class="col-sm-2 text-center">{{ move.amount < 0 ? (-1*move.amount)+' €' : '' }}</div>
+		<div class="col-sm-2 text-center">{{ move.amount > 0 ? move.amount+' €' : '' }}</div>
+		<div class="col-sm-2 text-center">{{ (getSum($index) | number:2)+' €' }}</div>
 	</div>
 
 
